--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,15 @@
 server:
   port: 8080
-# Spring相关配置
 spring:
   application:
-    # 应用的名称，可选
-    name: lili_takout
-  # 数据库相关配置
+    #应用的名称，可选
+    name: lili_take_out
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
       url: jdbc:mysql://localhost:3306/lili?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
       username: root
-      password: "082799@Sl"
-# Mybatis-plus相关配置
+      password: 082799@Sl
 mybatis-plus:
   configuration:
     #在映射实体或者属性时，将数据库中表名和字段名中的下划线去掉，按照驼峰命名法映射
