缓存优化：对验证码、菜品和套餐数据进行缓存

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,15 @@ spring:
       url: jdbc:mysql://localhost:3306/lili?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
       username: root
       password: 082799@Sl
+  # 配置Redis
+  redis:
+    host: localhost
+    port: 6379
+    database: 0
+  # 配置Cache
+  cache:
+    redis:
+      time-to-live: 1800000 # 设置缓存默认有效期
 mybatis-plus:
   configuration:
     #在映射实体或者属性时，将数据库中表名和字段名中的下划线去掉，按照驼峰命名法映射
